# Aqule

./: .gitattributes  .gitignore  .gitmodules  Aqule.sublime-project  Aqule.sublime-workspace  Aqule.workspace  CMakeLists.txt  README.md  folder  imgui.ini  todo
.github/workflows/: cmake.yml
Aqule-Core/: Aqule-Core.mk  Aqule-Core.project  CMakeLists.txt  compile_flags.txt
Aqule-Core/Aqule/: Application.cpp  Application.hpp  core.cpp
Aqule-Core/src/: Aqule.hpp  aqpch.hpp  aqpcz.hpp
Aqule-Core/src/Aqule/: Application.cpp  Core.hpp
Aqule-Core/src/Aqule/Core/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  MouseCodes.hpp  Window.hpp  log.cpp  log.hpp
Aqule-Core/src/Aqule/Event/: ApplicationEvent.hpp  Event.hpp  KeyboardEvent.hpp  MouseEvent.hpp
Aqule-Core/src/Aqule/Events/: Event.hpp  KeyEvent.hpp
Aqule-Core/src/Aqule/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Aqule-Core/src/Aqule/Layer/: ImGuiLayer.cpp  ImGuiLayer.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
Aqule-Core/src/Aqule/Platform/Linux/: LinuxInput.cpp  LinuxWindow.cpp  LinuxWindow.hpp
Aqule-Core/src/Aqule/Platform/OpenGL/: OpenGLShader.cpp  OpenGLShader.hpp
Aqule-Core/src/Aqule/Platform/OpenGL/OpenGLShader/: Shader.cpp  Shader.hpp
Aqule-Core/src/Aqule/Renderer/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Material.cpp  Material.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp
Aqule-Core/src/Aqule/Utils/: FileUtils.hpp
Aqule-Core/src/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.hpp
Aqule-Sandbox/: Aqule-Sandbox.mk  Aqule-Sandbox.project  compile_flags.txt
Aqule-Sandbox/src/: App.cpp  SandboxApp.cpp
Example/src/ImGui_Test_Aqule/: main.cpp  main2.cpp
Scripts/: build.sh  make_example.sh
assets/shader/: frag.shader  shader.frag  shader.vert  vert.shader
